syntax="proto3";
package response_grpc;
import "google/protobuf/timestamp.proto";

service ResponseHandler {
    rpc Find(ResponseID) returns (Response);
}

message Response {
    int64 ID=1;
    int64 FreelancerId=2;
    int64 JobId=3;
    string Files=4;
    google.protobuf.Timestamp Date=5;
    string StatusManager=6;
    string StatusFreelancer=7;
    float PaymentAmount=8;
}

message ResponseID {
    int64 ID=1;
}


